crates/nota-tui/tests/snapshots/processing_screen__processing_running.snap
---
source: crates/nota-tui/tests/processing_screen.rs
expression: "draw(&mut screen(), 62, 20)"
---
"╭─ ≈ nota · Woodwork workshop ──────────────── ◐ processing ─╮"
"│                                                            │"
"│ ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱ │"
"│                                                            │"
"│  Summary ◐   Transcript                                    │"
"│                                                            │"
"│  Finishing up                                              │"
"│                                                            │"
"│    ✓  Recording saved · parakeet · done                    │"
"│    ◐  Final transcript · parakeet · 40%                    │"
"│                                                            │"
"│  Summaries are not available yet.                          │"
"│  The transcript is ready to read now. You can also start   │"
"│  another recording.                                        │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"╰─ tab view  r record new  esc home ────────────── parakeet ─╯"
