crates/nota-tui/tests/snapshots/processing_screen__processing_transcript.snap
---
source: crates/nota-tui/tests/processing_screen.rs
expression: "draw(&mut screen, 62, 20)"
---
"╭─ ≈ nota · Woodwork workshop ──────────────── ◐ processing ─╮"
"│                                                            │"
"│ ▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱ │"
"│                                                            │"
"│  Summary ◐   Transcript                                    │"
"│                                                            │"
"│  Use a sharp plane on the edge of the board.               │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"│                                                            │"
"╰─ tab view  r record new  esc home ────────────── parakeet ─╯"
